# securewipe

./: Dockerfile  LICENSE  README.md  render.yaml
agent/linux/: config.yaml  install.sh  securewipe-agent.service
agent/windows/: README.md  install_agent.ps1
backend/: Cargo.toml
backend/src/: main.rs
deploy/: README.md
frontend/: index.html
scripts/: create_loopback.sh  create_vhdx.ps1
tools/: gen_key.py  requirements.txt  sign_and_send.py  verify_cert.py
verifier/: Dockerfile  app.py
verifier/templates/: index.html
