[package]
name = "securewipe_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
